Fixed bug when ar_list_of_values cached objects are modified by radio_button/select components

--- a/lib/dedalo/component_check_box/html/component_check_box_dataframe_edit.phtml
+++ b/lib/dedalo/component_check_box/html/component_check_box_dataframe_edit.phtml
@@ -47,7 +47,7 @@
 			$i=1; foreach ($ar_list_of_values->result as $key => $item) {
 
 				$label   	= (string)$item->label;
-				$locator 	= (object)$item->value;
+				$locator 	= (object)clone $item->value;
 				
 				# complete locator properties
 				$locator->type 		= $this->caller_dataset->type;
