--- a/lib/dedalo/component_input_text/html/component_input_text_edit.phtml
+++ b/lib/dedalo/component_input_text/html/component_input_text_edit.phtml
@@ -67,13 +67,13 @@
 				}
 
 				# Avoid autocomplete input username in Users section
-				$remove_autocomplete = null;
-				if ($section_tipo===DEDALO_SECTION_USERS_TIPO) {
-					$remove_autocomplete = "readonly onfocus=\"this.removeAttribute('readonly');component_common.select_wrap(null,'$id_wrapper');\"";
-				}else{
-					$remove_autocomplete = '';//"onfocus=\"component_common.select_wrap(null,'$id_wrapper')\";\"";
-					$remove_autocomplete = "onfocus=\"component_common.select_wrap_on_tab_focus(this,'$id_wrapper')\"";
-				}
+				#$remove_autocomplete = null;
+				#if ($section_tipo===DEDALO_SECTION_USERS_TIPO) {
+				#	$remove_autocomplete = "readonly onfocus=\"this.removeAttribute('readonly');component_common.select_wrap(null,'$id_wrapper');\"";
+				#}else{
+				#	$remove_autocomplete = '';//"onfocus=\"component_common.select_wrap(null,'$id_wrapper')\";\"";
+				#	$remove_autocomplete = "onfocus=\"component_common.select_wrap_on_tab_focus(this,'$id_wrapper')\"";
+				#}
 
 				# Read only mode (set in propiedades)
 				$read_only = null;
@@ -113,7 +113,7 @@
 					$html_content .= "title=\"$html_title\" ";
 					$html_content .= "$read_only ";
 					$html_content .= "autocomplete=\"off\" ";
-					$html_content .= "$remove_autocomplete "; // Events to remove autocomplete safari behavior
+					#$html_content .= "$remove_autocomplete "; // Events to remove autocomplete safari behavior
 					$html_content .= "data-tipo=\"{$tipo}\" ";
 					$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
 					$html_content .= "data-parent=\"{$parent}\" ";
@@ -156,7 +156,7 @@
 
 
 				if(SHOW_DEBUG===true) {
-					$html_content .= "<span class=\"debug_info notes\">".$dato_json."</span>";
+					$html_content .= "<span class=\"debug_info notes\">".$dato_json."</span>";					
 				}
 
 				# JS
