--- a/lib/dedalo/component_check_box/css/component_check_box.less
+++ b/lib/dedalo/component_check_box/css/component_check_box.less
@@ -52,7 +52,8 @@ check_box _________________________________*/
 	.css_wrap_check_box .content_data input.css_check_box {
 		padding: 2px;
 		border: 1px solid #9E9E9E;
-		border-radius: 3px;		
+		border-radius: 3px;
+		vertical-align: top;	
 		//box-shadow: inset 0 0 6px #999999 inset;	
 		}
 		.css_wrap_check_box input.css_check_box:hover {
@@ -67,6 +68,7 @@ check_box _________________________________*/
 	.css_wrap_check_box .content_data .css_check_box_rotulo {
 		padding-left: 5px;
 		padding-right: 10px;
+		width: 95%;
 	}
 
 
