--- a/lib/dedalo/component_check_box/css/component_check_box.less
+++ b/lib/dedalo/component_check_box/css/component_check_box.less
@@ -5,76 +5,80 @@
 @import "@{common_css}/library.less"; 
 
 
-/* 
-check_box _________________________________*/
-.css_wrap_check_box {
-	line-height: 1.1em;
-	//background-color: #7AFF2F
-	}
-	.css_wrap_check_box .content_data {
-		line-height: 1.6em;
-		/*
-			-moz-column-count: 3;
-		 -webkit-column-count: 3;
-				 column-count: 3;
 
-		 -webkit-column-gap: 3em;
-  			-moz-column-gap: 3em;
-  				 column-gap: 3em;*/
-  		display: flex;
-  		padding-left: 17%;
-		}
-		/*
-		.css_wrap_check_box .content_data ul {
-			display: table;
-		}
-		.css_wrap_check_box .content_data ul li label {
-			padding-left: 3px;
-		}*/
+// check_box
+	.css_wrap_check_box {
+		line-height: 1.1em;
+		//background-color: #7AFF2F
+		
+		>.content_data {
+			line-height: 1.6em;
+			/*
+				-moz-column-count: 3;
+			 -webkit-column-count: 3;
+					 column-count: 3;
 
-	// Search context
-	.wrap_check_box_search .content_data {
-		display: flex;
-		flex-flow: wrap;
-		width: 100%;		
+			 -webkit-column-gap: 3em;
+	  			-moz-column-gap: 3em;
+	  				 column-gap: 3em;*/
+	  		display: flex;
+	  		padding-left: 17%;
+
+	  		>ul {
+	  			
+	  			
+	  			>li {
+	  				display: flex;
+	  				align-items: flex-start;
+
+		  			input.css_check_box {
+						padding: 2px;
+						border: 1px solid #9E9E9E;
+						border-radius: 3px;
+						vertical-align: top;	
+						//box-shadow: inset 0 0 6px #999999 inset;
+
+						&:hover {
+							background-color: #F1F1F1;
+							cursor: pointer;
+						}
+					}
+
+					.css_check_box_rotulo {
+						padding-left: 5px;
+						padding-right: 10px;
+						width: 95%;
+					}	
+				}	  			
+	  		}//end >ul
+
+	  		
+		}//end >.content_data
+
+	}//end .css_wrap_check_box
+
+
+		
+// Search context
+	.wrap_check_box_search .content_data {		
+		width: 100%;
 		padding: 4px;
-		flex-grow: 1;
+		//flex-grow: 1;
 		line-height: 1.7em;
 		padding-bottom: 15px;
 		padding-top: 0;
-		}
-		.wrap_check_box_search .content_data .check_box_item {
-			//flex-basis: 50%;
-			align-self: flex-start;
-		}
-	
 
-	.css_wrap_check_box .content_data input.css_check_box {
-		padding: 2px;
-		border: 1px solid #9E9E9E;
-		border-radius: 3px;
-		vertical-align: top;	
-		//box-shadow: inset 0 0 6px #999999 inset;	
-		}
-		.css_wrap_check_box input.css_check_box:hover {
-			background-color: #F1F1F1;
-			cursor: pointer;
-		}
-		.css_wrap_check_box input.css_check_box:focus {
-		}
-		.css_wrap_check_box input.css_check_box:active {
+		display: grid !important;
+    	grid-template-columns: 3.5em 1fr;
+
+		>ul {
+			width: 96%;
 		}
 
-	.css_wrap_check_box .content_data .css_check_box_rotulo {
-		padding-left: 5px;
-		padding-right: 10px;
-		width: 95%;
-	}
-
-
-
-	.q_operator {
-		margin-right: 10px !important;
+		.q_operator {
+			margin-right: 10px !important;
+			height: 1.7em;
+		}		
 	}
 
 
