--- a/lib/dedalo/component_check_box/html/component_check_box_search.phtml
+++ b/lib/dedalo/component_check_box/html/component_check_box_search.phtml
@@ -27,12 +27,13 @@
 						
 		case ($permissions>=1)	:
 					
-			# COMPARISON OPERATORS
-			#$html_content .= operator::get_search_comparison_operators_html($tipo,$ar_comparison_operators);
+			
+
 			$html_content .= '<input class="q_operator" type="text" value="'.$q_operator.'" ';
 			$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";
 			$html_content .=' />';
 
+			$html_content .= '<ul class="group">';
 			$i=0;foreach ($ar_list_of_values->result as $key => $item) {
 				
 				$label   = (string)$item->label;
@@ -50,7 +51,9 @@
 
 				$current_id = $tipo .'_'. $i;
 
-				$html_content .= "<span class=\"check_box_item\">";
+				$html_content .= '<li>';
+
+				#$html_content .= "<span class=\"check_box_item\">";
 				$html_content .= "<input class=\"css_check_box\" type=\"checkbox\" name=\"{$search_input_name}_array\" ";
 				$html_content .= "id=\"{$current_id}\" ";
 				$html_content .= "data-tipo=\"{$tipo}\" ";
@@ -64,8 +67,11 @@
 				$html_content .= ">";
 				$html_content .= $label;
 				$html_content .= "</label> ";
-				$html_content .= "</span>";	
+				#$html_content .= "</span>";	
+
+				$html_content .= '</li>';
 			$i++;}
+			$html_content .= '</ul>';
 			
 			# LOGICAL OPERATORS
 			#$html_content .= operator::get_search_logical_operators_html($tipo,$ar_logical_operators);
