Fixed issue when search data is not saved for nex search

--- a/lib/dedalo/component_date/html/component_date_search.phtml
+++ b/lib/dedalo/component_date/html/component_date_search.phtml
@@ -18,67 +18,54 @@
 	switch(true) {
 			
 		case $permissions===0:
-					$html_content .= "";
-					break;
+				$html_content .= "";
+				break;
 						
 		case ($permissions>=1):
-	
-					# COMPARISON OPERATORS
-					$html_content .= operator::get_search_comparison_operators_html($tipo,$ar_comparison_operators);
 
-					$html_content .= "<ul>";
-					foreach ((array)$ar_dato as $key => $dato) {
-						
-						$html_content .= "<li>";
+				$html_content .= '<ul>';
+				foreach ((array)$ar_dato as $key => $current_dato) {
 					
-						$value = isset($valor[$key]) ? $valor[$key] : '';
-
+					$html_content .= '<li>';
+					
+					// value 
+						$value = isset($valor_start[$key]) ? $valor_start[$key] : '';
 						// If operator exists prepend to value (search values)
-						if (isset($dato->op)) {
-							$value = $dato->op . $value;
+						if (isset($current_dato->start->op)) {
+							$value = $current_dato->start->op . $value;
 						}
-					
-						#$html_content .= "<span id=\"search_component_$tipo\">";
-
-						$html_content .= "<input class=\"css_date\" type=\"text\" ";
-						#$html_content .= "name=\"{$search_input_name}\" ";
+				
+					// role 
 						switch ($date_mode) {
 							case 'range':
-								$html_content .= "data-role=\"range_start\" ";
+								$role = 'range_start';
 								break;
 							case 'period':
-								$html_content .= "data-role=\"period_year\" ";
+								$role = 'period_year';
 								break;
 							case 'time':
-								$html_content .= "data-role=\"date_time\" ";
+								$role = 'date_time';
 								break;
 							case 'date':
 							default:
-								$html_content .= "data-role=\"range_start\" ";
+								$role = 'range_start';
 								break;
-							}
-						$html_content .= "value=\"{$value}\" ";
-						#$html_content .= "data-tipo=\"{$tipo}\" ";
-						#$html_content .= "data-parent=\"{$parent}\" ";
-						#$html_content .= "data-lang=\"{$lang}\"	";				
+						}
+
+					// input
+						$html_content .= '<input class="css_date" type="text" ';
+						$html_content .= 'data-role="'.$role.'" ';
+						$html_content .= 'value="'.$value.'" ';
 						$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";
-						$html_content .= "/>";					
+						$html_content .= '/>';
 
-						#$html_content .= "</span>";
+					$html_content .= " <span class=\"css_span_ejemplo\">Format $ejemplo</span>";
 
-						$html_content .= " <span class=\"css_span_ejemplo\">Format $ejemplo</span>";	
-
-					
-						$html_content .= "</li>";
-					}//end foreach ($ar_dato as $key => $dato)
-					$html_content .= "</ul>";
-
-
-					# LOGICAL OPERATORS
-					$html_content .= operator::get_search_logical_operators_html($tipo,$ar_logical_operators);
 				
-					
-					break;				
+					$html_content .= '</li>';
+				}//end foreach ($ar_dato as $key => $current_dato)
+				$html_content .= '</ul>';
+				break;				
 	}
 	
 	# Prepare content to show in page
@@ -89,5 +76,6 @@
 	print $html_content;
 	
 	
-	print "</div>"; //wrap
-?>
+	print '</div>'; //wrap
+
+
